--- a/src/app/shared/layout/menu-footer/menu-footer.component.html
+++ b/src/app/shared/layout/menu-footer/menu-footer.component.html
@@ -17,7 +17,7 @@
         </a>
     </div>
     <div *ngIf="aoVivoHabilitado" class="bottom-bar-button" routerLinkActive="active" [ngClass]="{'menu-open': menuIsOpen}">
-        <a [routerLink]="['/esportes/live']">
+        <a [routerLink]="['/live/all']">
             <i class="fa fa-circle blink_me"></i> {{'geral.aoVivo' | translate}}
         </a>
     </div>
