done adaptacao logica e visual para multi psp

--- a/src/app/cambistas/deposito/deposito-cambista.component.html
+++ b/src/app/cambistas/deposito/deposito-cambista.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="content-body">
         <div class="content">
-            <div *ngIf="hasApiPagamentos">
+            <div *ngIf="hasPaymentMethodsAvailableForBettors">
                 <div class="row">
                     <div class="col-xs-12 col-md-12">
                         <div class="mt-2">
