--- a/src/app/clientes/deposito/pix/deposito-pix.component.html
+++ b/src/app/clientes/deposito/pix/deposito-pix.component.html
@@ -11,7 +11,9 @@
             <section id="payment-method-column" class="hide-mobile">
                 <h3>{{'financeiro.paymentGateway' | translate}}</h3>
                 <div class="options-container payment-method-options">
-                    <a class="payment-method-option" [ngClass]="{'active': paymentMethodSelected === paymentMethod}" (click)="changePaymentMethodOption(paymentMethod)">
+                    <a *ngFor="let paymentMethod of availablePaymentMethods"
+                        class="payment-method-option"
+                        [ngClass]="{'active': paymentMethodSelected === paymentMethod}" (click)="changePaymentMethodOption(paymentMethod)">
                         <div class="payment-method">
                             <i class="radio"></i>
                         </div>
@@ -32,8 +34,8 @@
                         <div class="details-text">
                             {{
                             permitirBonusPrimeiroDeposito ?
-                            ('deposito.depositText' | translate:{'paymentMethod': (paymentMethod | formatPaymentMethod), 'bonusType': (bonusType | translate)}) :
-                            ('deposito.depositTextWithoutBonus' | translate:{'paymentMethod': (paymentMethod | formatPaymentMethod)})
+                            ('deposito.depositText' | translate:{'paymentMethod': (paymentMethodSelected | formatPaymentMethod), 'bonusType': (bonusType | translate)}) :
+                            ('deposito.depositTextWithoutBonus' | translate:{'paymentMethod': (paymentMethodSelected | formatPaymentMethod)})
                             }}
                         </div>
                         <div class="hide-desktop details-payment-method">
@@ -41,7 +43,7 @@
                             <div class="form-group">
                                 <select formControlName="paymentMethod" type="text" class="form-control inverted-out"
                                     (change)="changePaymentMethodOption($event.target.value)">
-                                    <option [value]="paymentMethod">{{paymentMethod | formatPaymentMethod}}</option>
+                                    <option *ngFor="let paymentMethod of availablePaymentMethods" [value]="paymentMethod">{{paymentMethod | formatPaymentMethod}}</option>
                                 </select>
                                 <app-error-msg [control]="form.get('paymentMethod')"></app-error-msg>
                             </div>
