--- a/src/app/clientes/perfil-pix/perfil-pix.component.html
+++ b/src/app/clientes/perfil-pix/perfil-pix.component.html
@@ -18,7 +18,7 @@
                             <app-error-msg [control]="form.get('chave_pix')"></app-error-msg>
                             <small>{{'saques.alertaTitularChave' | translate}}</small>
                             <br>
-                            <small *ngIf="metodoPagamento == 'pagfast'">{{'saques.alertaChaveCelular' | translate}}</small>
+                            <small *ngIf="availablePaymentMethods.includes('pagfast')">{{'saques.alertaChaveCelular' | translate}}</small>
                         </div>
                     </div>
                 </div>
