--- a/src/app/clientes/deposito/pix/deposito-pix.component.css
+++ b/src/app/clientes/deposito/pix/deposito-pix.component.css
@@ -337,6 +337,34 @@
     cursor: pointer;
 }
 
+label.label-tempo {
+    display: block;
+    text-align: center;
+    margin: 0;
+}
+
+.tempo {
+    font-size: 14px;
+    font-weight: 600;
+    display: block;
+    text-align: center;
+}
+
+.valor {
+    display: block;
+    text-align: center;
+    font-size: 14px;
+    margin: 10px 0 70px;
+}
+
+.qr-code {
+    display: inline-block;
+    padding: 15px;
+    margin: 20px 0 10px;
+    border: 1px solid var(--highlight);
+    border-radius: 5px;
+}
+
 @media only screen and (max-width: 1024px) {
     .modal-body {
         padding-top: 50px;
