--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -20,7 +20,9 @@
                             <section id="payment-method-column" class="hide-mobile">
                                 <h3>{{'financeiro.paymentGateway' | translate}}</h3>
                                 <div class="options-container payment-method-options">
-                                    <a class="payment-method-option" [ngClass]="{'active': paymentMethodSelected === paymentMethod}" (click)="changePaymentMethodOption(paymentMethod)">
+                                    <a *ngFor="let paymentMethod of availablePaymentMethods"
+                                        class="payment-method-option"
+                                        [ngClass]="{'active': paymentMethodSelected === paymentMethod}" (click)="changePaymentMethodOption(paymentMethod)">
                                         <div class="payment-method">
                                             <i class="radio"></i>
                                         </div>
@@ -42,7 +44,7 @@
                                             {{'saques.availableBalanceForWithdrawal' | translate}}: <span class="available-amount">{{saldo | currency}}</span>
                                         </div>
                                         <div
-                                            *ngIf="paymentMethodSelected == 'sauto_pay' && !metodoPagamentoDesabilitado"
+                                            *ngIf="paymentMethodSelected == 'sauto_pay'"
                                             id="sautopay-alert"
                                             class="alert alert-info"
                                         >
@@ -126,7 +128,7 @@
                                             <div class="form-group">
                                                 <select formControlName="paymentMethod" type="text" class="form-control inverted-out"
                                                     (change)="changePaymentMethodOption($event.target.value)">
-                                                    <option [value]="paymentMethod">{{paymentMethod | formatPaymentMethod}}</option>
+                                                    <option *ngFor="let paymentMethod of availablePaymentMethods" [value]="paymentMethod">{{paymentMethod | formatPaymentMethod}}</option>
                                                 </select>
                                                 <app-error-msg [control]="form.get('paymentMethod')"></app-error-msg>
                                             </div>
