--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -113,7 +113,7 @@
                                 </ng-template>
                             </div>
                         </div>
-                        <div class="d-flex justify-content-around" *ngIf="pixCambista">
+                        <div class="d-flex justify-content-around" *ngIf="enabledBettorPix">
                             <a class="dropdown-btn w-150" (click)="abrirDepositosCambista()">
                                 {{'geral.liberarCredito' | translate}}
                             </a>
@@ -465,7 +465,7 @@
                             <a class="dropdown-btn w-130" [routerLink]="['clientes/saque']" *ngIf="isCliente">
                                 {{'geral.sacar' | translate}}
                             </a>
-                            <a class="dropdown-btn w-130" [routerLink]="['cambistas/deposito']" *ngIf="!isCliente && pixCambista">
+                            <a class="dropdown-btn w-130" [routerLink]="['cambistas/deposito']" *ngIf="!isCliente && enabledBettorPix">
                                 {{'geral.liberarCredito' | translate}}
                             </a>
                         </div>
