--- a/src/app/shared/layout/modals/cliente-pix-modal/cliente-pix-modal.component.html
+++ b/src/app/shared/layout/modals/cliente-pix-modal/cliente-pix-modal.component.html
@@ -17,7 +17,7 @@
                         <app-error-msg [control]="form.get('chave_pix')"></app-error-msg>
                         <small>{{'saques.alertaTitularChave' | translate}}</small>
                         <br>
-                        <small *ngIf="metodoPagamento == 'pagfast'">{{'saques.alertaChaveCelular' | translate}}</small>
+                        <small *ngIf="availablePaymentMethods.includes('pagfast')">{{'saques.alertaChaveCelular' | translate}}</small>
                     </div>
                     <div class="form-group input-md">
                         <input [type]="mostrarSenha ? 'text' : 'password'" placeholder=" " formControlName="senha_atual"
