--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -2,18 +2,19 @@
     display: block;
     position: relative;
     width: 100%;
-    height: auto;
-    min-height: 37px;
-    padding: 6px 20px;
+    height: 37px;
     background-color: var(--highlight);
     overflow: hidden;
     transition: height 0.3s, padding 0.3s;
 }
 
 .indique-ganhe-card-content {
+    height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 6px;
 }
 
 .indique-ganhe-card-content:not(button) {
@@ -24,9 +25,13 @@
 .btn-indique-ganhe-card {
     background-color: var(--header);
     color: var(--highlight);
-    width: 60px;
-    margin-left: 6px;
-    padding: 4px 7px !important;
+    height: 25px;
+    padding: 0 10px !important;
+    transition: width 0.3s, height 0.3s, font-size 0.3s;
+}
+
+.btn.btn-indique-ganhe-card {
+    height: 33px !important;
     transition: width 0.3s, height 0.3s, font-size 0.3s;
 }
 
@@ -43,7 +48,7 @@
 .indique-ganhe-card .btn-close {
     position: absolute;
     right: 30px;
-    top: 12px;
+    top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -424,9 +429,16 @@ body .change-theme {
 
 @media only screen and (min-width: 1025px) {
     .btn-indique-ganhe-card:hover {
-        width: 65px;
-        height: auto;
-        font-size: 13px;
+        padding: 0 15px !important;
+    }
+
+    .btn.btn-indique-ganhe-card:hover {
+        height: 30px !important;
+        font-size: 14px;
+    }
+
+    .btn.btn-indique-ganhe-card {
+        height: 25px !important;
     }
 }
 
@@ -505,16 +517,12 @@ body .change-theme {
 
     .indique-ganhe-card .btn-close {
         right: 20px;
-        top: 8px;
+        top: 5px;
         align-items: normal;
     }
 
     .saldos-item {
         text-align: center;
-    }
-
-    .btn.btn-indique-ganhe-card {
-        height: 30px !important;
     }
 
     .btn.mr-4 {
