--- a/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
+++ b/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
@@ -50,6 +50,7 @@
 
         &--provider {
             font-size: 13px;
+            font-weight: 500;
             text-overflow: ellipsis;
             text-wrap: nowrap;
             overflow: hidden;
@@ -84,12 +85,21 @@
 .game-button {
     display: none;
     width: 100%;
-    height: calc(100% - 38px);
+    height: calc(100% - 41px);
     position: absolute;
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
     top: 0;
+
+    &__container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 
     &--demo {
         display: flex !important;
@@ -99,7 +109,7 @@
         border-color: var(--foreground-header);
         color: var(--foreground-header);
         width: 70%;
-        height: 42px;
+        height: 33px !important;
         margin-bottom: 10px;
         pointer-events: none;
     }
@@ -111,7 +121,7 @@
         color: var(--header);
         background-color: var(--highlight);
         width: 70%;
-        height: 42px;
+        height: 33px !important;
         pointer-events: none;
     }
 
@@ -178,5 +188,10 @@
 
     .game-card--filter .game-card__info {
         max-width: 140px;
+    }
+
+    .game-button--demo,
+    .game-button--play {
+        height: 42px !important;
     }
 }
