--- a/src/app/casino/wall/wall.component.css
+++ b/src/app/casino/wall/wall.component.css
@@ -14,10 +14,11 @@
 
 .bloco {
     position: relative;
-    padding: 5px 20px;
+    padding: 0 20px 24px 20px;
     margin: 0 auto;
     width: 100%;
 }
+
 .bloco .titulo {
     text-align: left;
     font-size: 18px;
@@ -141,7 +142,7 @@
     flex-direction: column;
     gap: 20px;
     width: 100%;
-    margin-top: 20px;
+    margin-top: 16px;
 }
 
 .box-web{
@@ -179,7 +180,7 @@
     }
 
     .bloco {
-        padding: 10px;
+        padding: 0 10px 24px 10px
     }
 
     .game-list {
