ajuste mensagem de cancelamento de bônus

--- a/src/app/shared/layout/modals/canceled-bonus-confirm/canceled-bonus-confirm.component.html
+++ b/src/app/shared/layout/modals/canceled-bonus-confirm/canceled-bonus-confirm.component.html
@@ -8,6 +8,8 @@
     <div style="min-width: 143px;">
         <div>
             <p>Lembre-se, ao cancelar o bônus, você perderá todos os benefícios associados a ele. Esta ação é irreversível.</p>
+            <p>Além disso, todo o dinheiro do bônus recebido e quaisquer ganhos com dinheiro do bônus serão perdidos. Todo o valor gasto em apostas com bônus será descontado do saldo disponível.</p>
+            <p>Ao cancelar um bônus ativo, todas as apostas pendentes de resultado serão consideradas inválidas.</p>
             <p>Se você tiver certeza de que deseja prosseguir, clique em 'Confirmar Cancelamento'. Caso contrário, clique em 'Voltar' para manter o seu bônus.</p>
         </div>
     </div>
