--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -17,7 +17,7 @@
                     <form [formGroup]="form" (ngSubmit)="onSubmit()" *ngIf="cadastroCompleto && !respostaSolicitacao">
                         <app-spinner *ngIf="submitting"></app-spinner>
                         <div id="withdrawal-container">
-                            <section id="payment-method-column" class="hide-mobile">
+                            <section id="payment-method-column" class="hide-mobile" [hidden]="!availablePaymentMethods.length">
                                 <h3>{{'financeiro.paymentGateway' | translate}}</h3>
                                 <div class="options-container payment-method-options">
                                     <a *ngFor="let paymentMethod of availablePaymentMethods"
