--- a/src/app/home/widgets/cassino/cassino.component.html
+++ b/src/app/home/widgets/cassino/cassino.component.html
@@ -1,49 +1,33 @@
-<div class="loading-listagem" *ngIf="showLoadingIndicator">
-    <div class="slider">
-        <div class="title">
-            <div class="ssc-square left"></div>
-            <div class="ssc-square right"></div>
-        </div>
-        <div class="itens">
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
-            <div class="ssc-square content"></div>
+<ng-container *ngIf="showLoadingIndicator; else elseGameCasinoList">
+    oi
+    <app-skeleton type="casino" />
+</ng-container>
+<ng-template #elseGameCasinoList>
+    <div class="bloco" *ngIf="games.length > 0">
+        <app-wall-section
+            sectionId="cassino"
+            [title]="title ? title : ('geral.cassino' | translate)"
+            [itemsQty]="games.length"
+            [seeAllRouterLink]="linkAll"
+            (onLeft)="scrollLeft('cassino')"
+            (onRight)="scrollRight('cassino')"
+        />
+    
+        <div class="games-container">
+            <div class="more-games-fade more-games-fade-left" id="cassino-fade-left"></div>
+            <div class="game-list game-list-inline" #scrollGames id="cassino-scroll" (scroll)="onScroll('cassino')">
+                <app-wall-game-card
+                    *ngFor="let game of games"
+                    [game]="game"
+                    [blink]="linkAll"
+                    [isLoggedIn]="isLoggedIn"
+                    [isDemo]="isDemo"
+                    [isCliente]="isCliente"
+                    cardType="inline"
+                    (openModalLogin)="abrirModalLogin()"
+                />
+            </div>
+            <div class="more-games-fade more-games-fade-right" id="cassino-fade-right" *ngIf="games.length > 2"></div>
         </div>
     </div>
-</div>
-<div class="bloco" *ngIf="games.length > 0">
-    <app-wall-section
-        sectionId="cassino"
-        [title]="title ? title : ('geral.cassino' | translate)"
-        [itemsQty]="games.length"
-        [seeAllRouterLink]="linkAll"
-        (onLeft)="scrollLeft('cassino')"
-        (onRight)="scrollRight('cassino')"
-    />
-
-    <div class="games-container">
-        <div class="more-games-fade more-games-fade-left" id="cassino-fade-left"></div>
-        <div class="game-list game-list-inline" #scrollGames id="cassino-scroll" (scroll)="onScroll('cassino')">
-            <app-wall-game-card
-                *ngFor="let game of games"
-                [game]="game"
-                [blink]="linkAll"
-                [isLoggedIn]="isLoggedIn"
-                [isDemo]="isDemo"
-                [isCliente]="isCliente"
-                cardType="inline"
-                (openModalLogin)="abrirModalLogin()"
-            />
-        </div>
-        <div class="more-games-fade more-games-fade-right" id="cassino-fade-right" *ngIf="games.length > 2"></div>
-    </div>
-</div>
+</ng-template>
