fix: ajustar espaçamento da seção de jogos ao vivo

--- a/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.html
+++ b/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.html
@@ -15,7 +15,7 @@
             {{ 'geral.jogosAoVivo' | translate }}
         </div>
         <a routerLink="/live/all">
-            {{'geral.verTodos' | translate}} <i class="fa fa-solid fa-angle-right ml-2"></i>
+            {{'geral.verTodos' | translate}}
         </a>
     </div>
     <div class="wrap-sticky">
