--- a/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.css
+++ b/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.css
@@ -1,6 +1,6 @@
 .loading-listagem,
 .jogos-aovivo {
-    padding: 0 10px 24px;
+    padding: 14px 10px 24px;
 }
 
 .widgets-header {
@@ -172,7 +172,6 @@
 .campeonato .jogos .jogo .cotacoes .cotacao.disabled * {
     opacity: 0.3;
 }
-
 
 @media only screen and (max-width: 1024px) {
     .widgets-header {
